[gd_scene load_steps=3 format=3 uid="uid://b3k2unjn7lu28"]

[ext_resource type="PackedScene" uid="uid://b04w04pjffg0j" path="res://ui/continue_button.tscn" id="1_100ng"]
[ext_resource type="Script" uid="uid://bn1o76je6kiyr" path="res://root_scenes/round/round_leaderboard.gd" id="1_ihch3"]

[node name="RoundLeaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ihch3")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -155.0
offset_right = 62.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 2
text = "All ticks collected!"

[node name="ContinueButton" parent="." instance=ExtResource("1_100ng")]
layout_mode = 1
offset_top = -90.0
offset_bottom = -59.0

[node name="P1Label" type="Label" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 158.0
offset_right = 71.0
offset_bottom = 181.0
text = "Player 1"

[node name="P1ScoreValue" type="Label" parent="P1Label"]
layout_mode = 0
offset_left = 81.0
offset_right = 121.0
offset_bottom = 23.0

[node name="P2Label" type="Label" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 195.0
offset_right = 93.0
offset_bottom = 218.0
text = "Player 2"

[node name="P2ScoreValue" type="Label" parent="P2Label"]
offset_left = 75.0
offset_top = 4.0
offset_right = 115.0
offset_bottom = 27.0

[node name="P3Label" type="Label" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 232.0
offset_right = 93.0
offset_bottom = 255.0
text = "Player 3"

[node name="P3ScoreValue" type="Label" parent="P3Label"]
offset_left = 78.0
offset_top = 3.0
offset_right = 118.0
offset_bottom = 26.0

[node name="P4Label" type="Label" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 270.0
offset_right = 96.0
offset_bottom = 293.0
text = "Player 4"

[node name="P4ScoreValue" type="Label" parent="P4Label"]
offset_left = 78.0
offset_top = 1.0
offset_right = 118.0
offset_bottom = 24.0

[node name="RoundDurationLabel" type="Label" parent="."]
offset_left = 364.0
offset_top = 132.0
offset_right = 454.0
offset_bottom = 155.0
text = "Time Taken"

[node name="RoundDurationValue" type="Label" parent="RoundDurationLabel"]
layout_mode = 0
offset_left = 113.0
offset_top = -1.0
offset_right = 153.0
offset_bottom = 22.0
text = "0"

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
